# linear-regression

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  conanfile.txt  main.cpp  main_np.py  requirements.txt
cpp/: main.cpp
cpp/linreg/: linreg.cpp  linreg.h  main.h
cpp/linreg/correlation_coefficient/: linreg.cpp  linreg.h
cpp/linreg/least_squares/: linreg.cpp  linreg.h
cpp/math_utils/: math_utils.h
python/: main.py
